# Django-Airport-Service

./: Dockerfile  docker-compose.yml  pyproject.toml
accounts/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py  0003_userprofile.py  0004_remove_userprofile_first_name_and_more.py
config/: settings.py  urls.py
